[gd_scene load_steps=3 format=3 uid="uid://cnp5qfbx7yfhk"]

[ext_resource type="Script" path="res://Scripts/ui/minimal_title_debug.gd" id="1_title"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_title")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.2, 0.3, 1)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="MainContainer" type="VBoxContainer" parent="UILayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0

[node name="TitleLogo" type="Label" parent="UILayer/MainContainer"]
layout_mode = 2
text = "NEGABOKU"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="UILayer/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="MenuContainer" type="VBoxContainer" parent="UILayer/MainContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="UILayer/MainContainer/MenuContainer"]
layout_mode = 2
text = "新規ゲーム"
flat = false

[node name="LoadGameButton" type="Button" parent="UILayer/MainContainer/MenuContainer"]
layout_mode = 2
text = "ゲームロード"
flat = false

[node name="SettingsButton" type="Button" parent="UILayer/MainContainer/MenuContainer"]
layout_mode = 2
text = "設定"
flat = false

[node name="QuitButton" type="Button" parent="UILayer/MainContainer/MenuContainer"]
layout_mode = 2
text = "ゲーム終了"
flat = false

[node name="Spacer2" type="Control" parent="UILayer/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="VersionLabel" type="Label" parent="UILayer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
text = "v1.0.0"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
